--- a/lunchOrder/webapp/samplecode/shane/elasticSearchTest.html
+++ b/lunchOrder/webapp/samplecode/shane/elasticSearchTest.html
@@ -10,7 +10,7 @@
 </body>
 <script type="text/javascript">
 	$.ajax({
-		url: 'http://222.114.124.74:9200/gaia/message/_search',
+		url: 'http://localhost:9200/gaia/message/_search',
 		type: 'get',
 		dataType: 'json',
 		success : function(data){
